# wasm_shooting_game

./: Cargo.toml  README.html  README.md  build.sh  file_size.html  file_size.md  tasks.html  tasks.md
src/: browser.rs  enemy.rs  engine.rs  lib.rs  player.rs  state.rs  view.rs  weapon.rs
www/: index.html
www/pkg/: package.json  wasm_shooting_game.js  wasm_shooting_game_bg.wasm
