[package]
name = "wasm_shooting_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib",]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"

[dependencies.web-sys]
version = "0.3.68"
features = [
  "Window", 
  "console",
  "Document",
  'Element',
  'HtmlElement',
  'Node',
  'Performance', 
  "HtmlCanvasElement", 
  "CanvasRenderingContext2d", 
  "KeyboardEvent"
]
